--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Voxel Front</title>
     <script src="three.js"></script>
+    <script src="common.js"></script>
     <style>
         body {
             margin: 0;
